--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.0.0",
     "shiki": "^3.2.2",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
