--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "prettier:fix": "pnpx prettier src . --write"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.2.6",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "prettier": "^3.5.3",
