--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "preview": "next build && next start",
     "prettier": "pnpx prettier src . --check",
     "prettier:fix": "pnpx prettier src . --write"
   },
