--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint",
     "preview": "next build && next start",
     "prettier": "pnpx prettier src . --check",
-    "prettier:fix": "pnpx prettier src . --write"
+    "prettier:fix": "pnpx prettier src . --write",
+    "email": "email dev"
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-email/components": "^0.0.38",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.2.6",
@@ -21,9 +23,9 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.5.1",
     "shiki": "^3.2.2",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "react-email": "^4.0.11",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
