--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint",
     "preview": "next build && next start",
     "prettier": "pnpx prettier src . --check",
-    "prettier:fix": "pnpx prettier src . --write",
-    "email": "email dev"
+    "prettier:fix": "pnpx prettier src . --write"
   },
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.4",
-    "@react-email/components": "^0.0.38",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.2.6",
@@ -36,7 +34,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "react-email": "^4.0.11",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
