--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier:fix": "pnpx prettier src . --write"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,9 +22,11 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "resend": "^4.5.1",
     "shiki": "^3.2.2",
     "tailwind-merge": "^3.2.0",
+    "zod": "^3.25.28",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
