--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "eslint-plugin-prettier": "^5.2.6",
     "framer-motion": "^12.7.4",
+    "gsap": "^3.13.0",
     "next": "15.2.4",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
