--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-responsive": "^10.0.1",
     "resend": "^4.5.1",
     "shiki": "^3.2.2",
     "tailwind-merge": "^3.2.0",
